--- a/_sass/minimal-mistakes/skins/_air.scss
+++ b/_sass/minimal-mistakes/skins/_air.scss
@@ -1,12 +1,13 @@
 /* ==========================================================================
    Air skin
+primary-color 脚颜色
    ========================================================================== */
 
 /* Colors */
 $background-color: #eeeeee !default;
 $text-color: #222831 !default;
 $muted-text-color: #393e46 !default;
-$primary-color: #0092ca !default;
+$primary-color: #a9a9a9 !default;
 $border-color: mix(#fff, #393e46, 75%) !default;
 $footer-background-color: $primary-color !default;
 $link-color: #393e46 !default;
