--- a/_sass/minimal-mistakes/skins/_dirt.scss
+++ b/_sass/minimal-mistakes/skins/_dirt.scss
@@ -1,5 +1,6 @@
 /* ==========================================================================
    Dirt skin
+base03 脚颜色
    ========================================================================== */
 
 /* Colors */
@@ -18,7 +19,7 @@ $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
 $base00: #231e18 !default;
 $base01: #302b25 !default;
 $base02: #48413a !default;
-$base03: #9d8b70 !default;
+$base03: #eeeeee !default;
 $base04: #b4a490 !default;
 $base05: #cabcb1 !default;
 $base06: #d7c8bc !default;
