--- a/_sass/minimal-mistakes/skins/_dirt.scss
+++ b/_sass/minimal-mistakes/skins/_dirt.scss
@@ -6,7 +6,7 @@ base03 脚颜色
 /* Colors */
 $background-color: #f3f3f3 !default;
 $text-color: #343434 !default;
-$muted-text-color: #8e8b82 !default;
+$muted-text-color: #f3f3f3 !default;
 $primary-color: #343434 !default;
 $border-color: #f2f3f4 !default;
 $footer-background-color: #6e7f80 !default;
